# nlp-smartvision

./: .gitignore  CMakeLists.txt  README  README.md  build.sh
CMSIS/DSP/Source/BasicMathFunctions/: BasicMathFunctions.c  BasicMathFunctionsF16.c
CMSIS/DSP/Source/CommonTables/: CommonTables.c
CMSIS/DSP/Source/ComplexMathFunctions/: ComplexMathFunctions.c
CMSIS/DSP/Source/ControllerFunctions/: ControllerFunctions.c
CMSIS/DSP/Source/DistanceFunctions/: DistanceFunctions.c
CMSIS/DSP/Source/FastMathFunctions/: FastMathFunctions.c
CMSIS/DSP/Source/FilteringFunctions/: FilteringFunctions.c
CMSIS/DSP/Source/MatrixFunctions/: MatrixFunctions.c
CMSIS/DSP/Source/StatisticsFunctions/: StatisticsFunctions.c
CMSIS/DSP/Source/SupportFunctions/: SupportFunctions.c
CMSIS/DSP/Source/TransformFunctions/: TransformFunctions.c  TransformFunctionsF16.c
CMSIS/NN/Source/NNSupportFunctions/: arm_nntables.c
CMSIS/NN/Source/SoftmaxFunctions/: arm_softmax_q15.d
Hello_edge/src/: ds_cnn.cpp  kws_ds_cnn.cpp  kws_ds_cnn.h
notebook/: AA7.ipynb  kws_aa.ipynb  nlp-smartvision.ipynb  nlp_smartvision.ipynb
script/: asound.conf  init-imx-smartvision.sh  init-isp-smartvision.sh  init-nlp-smartvision.sh  nlp-smartvision  nlp-smartvision-install.py  rgb-mipi-dp.sh  rgb_mipi-dp.sh
src/: acapture_PS.cpp  acapture_init.h  aconfig.h  aplay.cpp  detection.cpp  ds_cnn.h  ds_cnn_weights.h  gettext.h  global_var.h  keyword_spotting.cpp  kws.h  local_NN.h  main.cpp  process_result_facedetect.hpp  process_result_lanedetect.hpp  process_result_objectdetect.hpp  process_result_platedetect.hpp  process_result_segmentation.hpp  tmp.tpp  version.h
src/Include/: global_var.h  process_result_facedetect.hpp  process_result_objectdetect.hpp  process_result_platedetect.hpp  process_result_segmentation.hpp
